Verify pattern complexity.